# FG-CLIP

./: README.md  README_en.md  index.html  pyproject.toml
data/: data.md  get_data.sh
fgclip/eval/: fgovd_eval.py  shareg4v_retrieval.py
fgclip/model/clip_strc/: configuration_clip.py  fgclip.py
fgclip/train/: clean_clip_trainer.py  train_fgclip.py  train_mem.py
fgclip2/eval/: coco_box_ddp.py  coco_cn.py  coco_retrieval.py  dci_retrieval.py  fgovd.py  fgovd_bbox_roi.py  flicker_cna.py  flickr30k_retrieval.py  long_trans_cn.py  share1k_retrieval.py
fgclip2/eval/in1k/: eval_IN1K.py  imagenet2012.py  laion_cn_box_cls_ddp.py  lvis_box_cls_ddp.py
fgclip2/eval/inv2/: inv2.py
fgclip2/model/: __init__.py
fgclip2/model/strcs/: __init__.py  configuration_fgclip2.py  fgclip2.py  image_processing_fgclip2.py  image_processing_fgclip2_fast.py  modeling_fgclip2.py  modular_fgclip2.py  processing_fgclip2.py
fgclip2/train/: local_trainer.py  train.py  train_fgclip2.py
scripts/: train.sh
scripts/eval/: eval.sh  eval_coco_boxcls.sh  eval_fgovd.sh  eval_in1k.sh  eval_inv2.sh  eval_long.sh
scripts/train/: stage2_fgclip2.sh
